--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router": "^6.14.2",
-    "react-router-dom": "^6.14.2",
+    "react-router-dom": "^6.30.2",
     "react-scripts": "5.0.1",
     "recharts": "^3.6.0",
     "web-vitals": "^2.1.4"
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
